<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- CONTAINER -->
    <LinearLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="3">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:background="@drawable/bg_orange_w_blue_border"
                android:layout_gravity="bottom">

                <android.support.constraint.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/recoTitleTextView"
                        style="@android:style/TextAppearance.DeviceDefault.Large"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="25dp"
                        android:layout_marginLeft="25dp"
                        android:layout_marginTop="30dp"
                        android:text="@string/recoTxt"
                        android:textColor="@color/ic_launcher_background"
                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <RadioGroup
                        android:id="@+id/recoViewModeRadioGroup"
                        android:layout_width="306dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="30dp"
                        android:layout_marginBottom="30dp"
                        android:orientation="horizontal"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="@+id/recoTitleTextView"
                        app:layout_constraintTop_toBottomOf="@+id/recoTitleTextView">

                        <RadioButton
                            android:id="@+id/listRadioBtn"
                            style="@android:style/TextAppearance.DeviceDefault.Medium"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/listRadBtnTxt"
                            android:textColor="@color/ic_launcher_background" />

                        <RadioButton
                            android:id="@+id/gridRadioBtn"
                            style="@android:style/TextAppearance.DeviceDefault.Medium"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/gridRadBtnTxt"
                            android:textColor="@color/ic_launcher_background" />
                    </RadioGroup>

                </android.support.constraint.ConstraintLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:background="@drawable/bg_orange_w_blue_border"
                android:layout_gravity="bottom"
                >

                <android.support.constraint.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/minijuegoTitleTextView"
                        style="@android:style/TextAppearance.DeviceDefault.Large"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="25dp"
                        android:layout_marginLeft="25dp"
                        android:layout_marginTop="30dp"
                        android:text="@string/minijuegoTxt"
                        android:textColor="@color/ic_launcher_background"
                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <RadioGroup
                        android:id="@+id/minijuegoRadioGroup"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="30dp"
                        android:orientation="horizontal"
                        app:layout_constraintStart_toStartOf="@+id/minijuegoTitleTextView"
                        app:layout_constraintTop_toBottomOf="@+id/minijuegoTitleTextView">

                        <RadioButton
                            android:id="@+id/RPRadioBtn"
                            style="@android:style/TextAppearance.DeviceDefault.Medium"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginRight="8dp"
                            android:layout_weight="1"
                            android:paddingRight="@dimen/fab_margin"
                            android:text="@string/RPRadBtnTxt"
                            android:textColor="@color/ic_launcher_background" />

                        <RadioButton
                            android:id="@+id/RPJRadioBtn"
                            style="@android:style/TextAppearance.DeviceDefault.Medium"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginRight="8dp"
                            android:layout_weight="1"
                            android:paddingRight="@dimen/fab_margin"
                            android:text="@string/RPJRadBtnTxt"
                            android:textColor="@color/ic_launcher_background" />

                    </RadioGroup>

                    <RadioGroup
                        android:id="@+id/interactionRadioGroup"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:layout_marginBottom="30dp"
                        android:orientation="horizontal"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="@+id/minijuegoTitleTextView"
                        app:layout_constraintTop_toBottomOf="@+id/minijuegoRadioGroup">

                        <RadioButton
                            android:id="@+id/InteracARadBtn"
                            style="@android:style/TextAppearance.DeviceDefault.Medium"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginRight="8dp"
                            android:layout_weight="1"
                            android:paddingRight="@dimen/fab_margin"
                            android:text="@string/InteracARadBtnTxt"
                            android:textColor="@color/ic_launcher_background" />

                        <RadioButton
                            android:id="@+id/InteracBRadBtn"
                            style="@android:style/TextAppearance.DeviceDefault.Medium"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginRight="8dp"
                            android:layout_weight="1"
                            android:paddingRight="@dimen/fab_margin"
                            android:text="@string/InteracBRadBtnTxt"
                            android:textColor="@color/ic_launcher_background" />

                    </RadioGroup>
                </android.support.constraint.ConstraintLayout>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="3">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:background="@drawable/bg_orange_w_blue_border"
                android:layout_gravity="bottom"
                >

                <android.support.constraint.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                   >

                    <TextView
                        android:id="@+id/levelTitleTextView"
                        style="@android:style/TextAppearance.DeviceDefault.Large"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="25dp"
                        android:layout_marginLeft="25dp"
                        android:layout_marginTop="30dp"
                        android:text="@string/levelTxt"
                        android:textColor="@color/ic_launcher_background"
                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <Switch
                        android:id="@+id/levelSwitch"
                        style="@android:style/TextAppearance.DeviceDefault.Medium"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="25dp"
                        android:layout_marginLeft="25dp"
                        android:layout_marginTop="30dp"
                        android:layout_marginBottom="30dp"
                        android:switchMinWidth="100dp"
                        android:text="@string/level1"
                        android:textColor="@color/ic_launcher_background"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/levelTitleTextView" />

                    <TextView
                        android:id="@+id/levelSwitchOnTextView"
                        style="@android:style/TextAppearance.DeviceDefault.Medium"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/level2"
                        android:textColor="@color/ic_launcher_background"
                        app:layout_constraintBaseline_toBaselineOf="@+id/levelSwitch"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/levelSwitch" />

                </android.support.constraint.ConstraintLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:background="@drawable/bg_orange_w_blue_border"
                android:layout_gravity="bottom"
                >

                <android.support.constraint.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/audioTitleTextView"
                        style="@android:style/TextAppearance.DeviceDefault.Large"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="25dp"
                        android:layout_marginLeft="25dp"
                        android:layout_marginTop="30dp"
                        android:text="@string/audioTxt"
                        android:textColor="@color/ic_launcher_background"
                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <Switch
                        android:id="@+id/audioSwitch"
                        style="@android:style/TextAppearance.DeviceDefault.Medium"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="25dp"
                        android:layout_marginLeft="25dp"
                        android:layout_marginTop="30dp"
                        android:layout_marginBottom="30dp"
                        android:switchMinWidth="100dp"
                        android:text="@string/male_audio"
                        android:textColor="@color/ic_launcher_background"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/audioTitleTextView" />

                    <TextView
                        android:id="@+id/audioSwitchOnTextView"
                        style="@android:style/TextAppearance.DeviceDefault.Medium"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/female_audio"
                        android:textColor="@color/ic_launcher_background"
                        app:layout_constraintBaseline_toBaselineOf="@+id/audioSwitch"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/audioSwitch" />

                    <Button
                        android:id="@+id/acceptBtn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="8dp"
                        android:layout_marginRight="8dp"
                        android:layout_marginBottom="8dp"
                        android:background="@color/colorAccent"
                        android:onClick="onAccept"
                        android:text="Aceptar"
                        android:textColor="@color/ic_launcher_background"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/audioSwitch" />

                </android.support.constraint.ConstraintLayout>
            </LinearLayout>
        </LinearLayout>


    </LinearLayout>
</android.support.constraint.ConstraintLayout>